# libinject

./: CMakeLists.txt  Makefile  README.md
include/inject/: inject.h  ptrace.h  reflect_overrides.h
src/: main.c  ptrace.c  reflect_overrides.c
